--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 		<meta name="color-scheme" content="light only" />
-		<meta name="description" content="WUber - Uber for the water" />
-		<meta property="og:site_name" content="WUber" />
-		<meta property="og:title" content="WUber" />
-		<meta property="og:type" content="website" />
-		<meta property="og:description" content="WUber - Uber for the water" />
-		<meta property="og:image" content="https://wuber.carrd.co/assets/images/card.jpg?v=87a78d91" />
-		<meta property="og:image:type" content="image/jpeg" />
-		<meta property="og:image:width" content="1280" />
-		<meta property="og:image:height" content="800" />
-		<meta property="og:url" content="https://wuber.carrd.co" />
-		<meta property="twitter:card" content="summary_large_image" />
-		<link rel="canonical" href="https://wuber.carrd.co" />
+		<meta name="description" content="Promptopia - Unleash Your Creativity with 3000+ Expertly Crafted ChatGPT Prompts" />
+<meta property="og:site_name" content="Promptopia" />
+<meta property="og:title" content="Promptopia - Your Ultimate ChatGPT Prompt Library" />
+<meta property="og:type" content="website" />
+<meta property="og:description" content="Promptopia offers a collection of 3000+ AI-powered prompts to help writers, marketers, and creatives save time and boost productivity effortlessly." />
+<meta property="og:image" content="https://promptopia.net" />
+<meta property="og:image:type" content="image/jpeg" />
+<meta property="og:image:width" content="1280" />
+<meta property="og:image:height" content="800" />
+<meta property="og:url" content="https://promptopia.net" />
+<meta property="twitter:card" content="summary_large_image" />
+<link rel="canonical" href="https://promptopia.net" />
 		<link href="https://fonts.googleapis.com/css?display=swap&family=Fraunces:300,300italic,400,400italic%7CInter:400,400italic,600,600italic,700,700italic,900,900italic" rel="stylesheet" type="text/css" />
 		<link rel="stylesheet" href="./style.css">
 	</head>
