--- a/index.html
+++ b/index.html
@@ -126,29 +126,35 @@
 			</div>
 		</div>
 		<script>
-			 // Add error handling for the download
-			 document.querySelector('.download-button a').addEventListener('click', async (e) => {
-            e.preventDefault();
-            try {
-                const response = await fetch('/download-pdf');
-                if (!response.ok) {
-                    const error = await response.json();
-                    alert(error.message || 'Download failed');
-                    return;
-                }
-                const blob = await response.blob();
-                const url = window.URL.createObjectURL(blob);
-                const a = document.createElement('a');
-                a.href = url;
-                a.download = 'AI-Genius-AI-Prompts-For-Creators.pdf';
-                document.body.appendChild(a);
-                a.click();
-                window.URL.revokeObjectURL(url);
-                document.body.removeChild(a);
-            } catch (err) {
-                alert('An error occurred during download');
-            }
+		// Function to download PDF
+const downloadPDF = async () => {
+    try {
+        const response = await fetch('https://promptopia-7251eujig-mfrancois3ks-projects.vercel.app/api/download', {
+            method: 'GET',
         });
+
+        if (!response.ok) {
+            throw new Error(`HTTP error! status: ${response.status}`);
+        }
+
+        const blob = await response.blob();
+        const url = window.URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = 'AI-Genius-AI-Prompts-For-Creators.pdf';
+        document.body.appendChild(a);
+        a.click();
+        document.body.removeChild(a);
+        window.URL.revokeObjectURL(url);
+
+    } catch (error) {
+        console.error('Download failed:', error);
+    }
+};
+
+// Usage example:
+// Add button click listener
+document.getElementById('downloadButton').addEventListener('click', downloadPDF);
 		</script>
 		<script src="./index.js"></script>
 		<script src="./main.js"></script>
