--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		// Function to download PDF
 const downloadPDF = async () => {
     try {
-        const response = await fetch('https://promptopia-7251eujig-mfrancois3ks-projects.vercel.app/api/download', {
+        const response = await fetch('https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view', {
             method: 'GET',
         });
 
