--- a/index.html
+++ b/index.html
@@ -126,17 +126,12 @@
 			</div>
 		</div>
 		<script>
-		// Function to download PDF
-const downloadPDF = async () => {
+		document.querySelector('.download-button .button').addEventListener('click', async (e) => {
+    e.preventDefault();
     try {
-        const response = await fetch('https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view', {
-            method: 'GET',
-        });
-
-        if (!response.ok) {
-            throw new Error(`HTTP error! status: ${response.status}`);
-        }
-
+        const response = await fetch('/api/download');
+        if (!response.ok) throw new Error('Download failed');
+        
         const blob = await response.blob();
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
@@ -146,15 +141,11 @@ const downloadPDF = async () => {
         a.click();
         document.body.removeChild(a);
         window.URL.revokeObjectURL(url);
-
     } catch (error) {
         console.error('Download failed:', error);
     }
-};
+});
 
-// Usage example:
-// Add button click listener
-document.getElementById('downloadButton').addEventListener('click', downloadPDF);
 		</script>
 		<script src="./index.js"></script>
 		<script src="./main.js"></script>
