--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		document.querySelector('.download-button .button').addEventListener('click', async (e) => {
     e.preventDefault();
     try {
-        const response = await fetch('/api/download');
+        const response = await fetch('https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing');
         if (!response.ok) throw new Error('Download failed');
         
         const blob = await response.blob();
@@ -147,6 +147,7 @@
 });
 
 		</script>
+		<script src="./server.js"></script>
 		<script src="./index.js"></script>
 		<script src="./main.js"></script>
 	</body>
