update new  endpoint

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<div class="field"><input type="email" name="email" id="form01-email" placeholder="Email address" maxlength="128" required /></div>
 								<div class="field"><input type="text" name="mail" id="form01-mail" placeholder="Mail" maxlength="128" /></div> -->
 								<div class="download-button">
-									<a href="https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view" class="button" download>Download PDF</a>
+									<a href="https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view" class="button" target="_blank">Download PDF</a>
 								</div>
 							</div>
 							<input type="hidden" name="id" value="form01" />
