update new  endpoint

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
         a.href = url;
-        a.download = 'AI-Genius-AI-Prompts-For-Creators.pdf';
+        a.download = 'https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing';
         document.body.appendChild(a);
         a.click();
         document.body.removeChild(a);
