update new  endpoint

--- a/index.html
+++ b/index.html
@@ -61,13 +61,15 @@
 							<span class="p">Transform your creative process with the ultimate collection of over 1000 expertly crafted ChatGPT prompts. Whether you're a writer, teacher, programmer, or marketer, this library will help you spark fresh ideas, save time, and produce outstanding content effortlessly.</span>
 							<span class="p">Get instant access to the ChatGPT Prompt Library and supercharge your creativity today!</span>
 						</p>
-						<form id="form01" method="post">
+						<form id="form01" action="/download-file" method="get">
 							<div class="inner">
 								<!-- <div class="field"><input type="text" name="fname" id="form01-fname" placeholder="Name" maxlength="128" required /></div>
 								<div class="field"><input type="email" name="email" id="form01-email" placeholder="Email address" maxlength="128" required /></div>
 								<div class="field"><input type="text" name="mail" id="form01-mail" placeholder="Mail" maxlength="128" /></div> -->
 								<div class="download-button">
+									<button type="submit">
 									<a href="https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing" class="button" target="_blank">Download PDF</a>
+								</button>
 								</div>
 							</div>
 							<input type="hidden" name="id" value="form01" />
