--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 								<div class="field"><input type="text" name="mail" id="form01-mail" placeholder="Mail" maxlength="128" /></div> -->
 								<div class="download-button">
 									<button type="submit">
-									<a href="https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing" class="button" target="_blank">Download PDF</a>
+									<a href="" class="button" >Download PDF</a>
 								</button>
 								</div>
 							</div>
