--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 		document.querySelector('.download-button .button').addEventListener('click', async (e) => {
     e.preventDefault();
     try {
-        const response = await fetch('https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing');
+        const response = await fetch('./public/assets/AI-Genius-AI-Prompts-For-Creators-1_230216_083125.pdf');
         if (!response.ok) throw new Error('Download failed');
         
         const blob = await response.blob();
         const url = window.URL.createObjectURL(blob);
         const a = document.createElement('a');
         a.href = url;
-        a.download = 'https://drive.google.com/file/d/1AjXetu6N3HZVbTtnbONFZTE89gy3uOLK/view?usp=sharing';
+        a.download = './public/assets/AI-Genius-AI-Prompts-For-Creators-1_230216_083125.pdf';
         document.body.appendChild(a);
         a.click();
         document.body.removeChild(a);
