--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 								<div class="field"><input type="email" name="email" id="form01-email" placeholder="Email address" maxlength="128" required /></div>
 								<div class="field"><input type="text" name="mail" id="form01-mail" placeholder="Mail" maxlength="128" /></div> -->
 								<div class="download-button">
-									<button type="submit">
-									<a href="" class="button" >Download PDF</a>
+									<button class="buttons" id="buttons01" type="submit">
+									Download PDF
 								</button>
 								</div>
 							</div>
