--- a/index.html
+++ b/index.html
@@ -61,17 +61,21 @@
 							<span class="p">Transform your creative process with the ultimate collection of over 1000 expertly crafted ChatGPT prompts. Whether you're a writer, teacher, programmer, or marketer, this library will help you spark fresh ideas, save time, and produce outstanding content effortlessly.</span>
 							<span class="p">Get instant access to the ChatGPT Prompt Library and supercharge your creativity today!</span>
 						</p>
-						<form id="form01" action="/download-file" method="get">
+						<form id="form01" action="/download-file" method="post">
 							<div class="inner">
-								<!-- <div class="field"><input type="text" name="fname" id="form01-fname" placeholder="Name" maxlength="128" required /></div>
-								<div class="field"><input type="email" name="email" id="form01-email" placeholder="Email address" maxlength="128" required /></div>
-								<div class="field"><input type="text" name="mail" id="form01-mail" placeholder="Mail" maxlength="128" /></div> -->
 								<div class="download-button">
-									<button class="buttons" id="buttons01" type="submit">
-									Download PDF
-								</button>
+									<ul class="buttons" id="buttons01">
+										<li>
+											<a href="./assets/AI-Genius-AI-Prompts-For-Creators-1_230216_083125.pdf" 
+											   class="button" 
+											   download>
+												<span class="label">Download PDF</span>
+											</a>
+										</li>
+									</ul>
 								</div>
 							</div>
+						
 							<input type="hidden" name="id" value="form01" />
 						</form>
 					</section>
