--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
 					<header id="header"></header>
 					<section id="home-section">
 						<div id="image01" class="image">
+							
 							<span class="frame"><img src="https://storage.ko-fi.com/cdn/useruploads/display/739f9019-c768-4551-a9a3-d434cb12c5a5_chatgptpromptlibrary.jpg" alt="" /></span>
-						</div>
-						<h2 id="text04" class="style3"><strong>Unleash Your Creativity, One Prompt at a Time.</strong></h2>
-						<p id="text05" class="style1">
+						</div> 
+						<h2 id="text04" class="style3"><strong> <bold> ChatGPT</bold> <br>Prompt Library</strong></h2>
+						<p id="text05" class="style1"> 		
 							<span class="p">Transform your creative process with the ultimate collection of over 1000 expertly crafted ChatGPT prompts. Whether you're a writer, teacher, programmer, or marketer, this library will help you spark fresh ideas, save time, and produce outstanding content effortlessly.</span>
 							<span class="p">Get instant access to the ChatGPT Prompt Library and supercharge your creativity today!</span>
 						</p>
